[package]
name = "ferro-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Desktop application for Ferro"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
publish = false

[[bin]]
name = "ferro-desktop"
path = "src/main.rs"

[features]
default = []
tauri = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-updater",
    "dep:roxmltree",
    "dep:reqwest",
]
screenshot = [
    "dep:tauri",
    "dep:webkit2gtk",
    "dep:gtk",
    "dep:glib",
    "dep:cairo-rs",
]
mobile = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-http",
    "dep:roxmltree",
    "dep:reqwest",
    "dep:zip",
]
android = [
    "dep:tauri",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-http",
    "dep:roxmltree",
    "dep:reqwest",
]
sync = [
    "dep:reqwest",
    "dep:walkdir",
    "dep:sha2",
    "dep:hex",
    "dep:roxmltree",
]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-http = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
roxmltree = { version = "0.20", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
webkit2gtk = { version = "2", optional = true }
gtk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
cairo-rs = { version = "0.18", features = ["png"], optional = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
 walkdir = { version = "2", optional = true }
dirs = "5"
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
zip = { version = "0.6", optional = true }
common = { package = "ferro-common", path = "../common", features = ["http"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
cocoa = "0.25"
objc = "0.2"

[build-dependencies]
tauri-build = { version = "2", optional = true }
