[package]
name = "ferro-distributed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Distributed storage primitives for the Ferro ecosystem (erasure coding, geo-replication, Raft consensus)"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
