[package]
name = "ferro-distributed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Distributed storage primitives for the Ferro ecosystem (erasure coding, geo-replication, Raft consensus)"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
publish = false

[dependencies]
common = { package = "ferro-common", path = "../common" }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "rt", "net", "io-util"] }
async-trait = "0.1"
dashmap = "6"
sha2 = { workspace = true }
bytes = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { workspace = true }
reed-solomon-erasure = "6"
tracing = "0.1"
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile = "3"
