[package]
name = "ferro-e2ee"
version.workspace = true
edition.workspace = true
description = "Client-side end-to-end encryption for the Ferro storage ecosystem"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
rust-version.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }
x25519-dalek = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
