[package]
name = "ferro-event-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
hashbrown = { workspace = true, features = ["serde"] }
ahash = { workspace = true }
crossbeam = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
