[package]
name = "ferro-feature-flags"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Lightweight feature flag system for Ferro"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
parking_lot = "0.12"
