[package]
name = "ferro-ui"
version = "0.1.0"
edition = "2021"
description = "Ferro frontend — Leptos WASM UI rewritten to FAANG/Defense/HFT/ECN standards"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement",
    "Element", "Event", "EventTarget", "MouseEvent", "KeyboardEvent",
    "DragEvent", "DataTransfer", "File", "FileList", "Blob",
    "Storage", "Headers", "Request", "RequestInit", "Response",
    "console", "Location", "Navigator", "MediaQueryList",
    "MediaQueryListEvent", "IntersectionObserver", "IntersectionObserverEntry",
    "IntersectionObserverInit", "HtmlLinkElement", "HtmlStyleElement",
    "Node", "NodeList", "WebSocket", "MessageEvent", "CloseEvent",
    "ResizeObserver", "ResizeObserverEntry", "DomRect",
    "Performance", "PerformanceNavigationTiming",
] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]
