[package]
name = "ferro-fuse"
version = "2.2.0"
edition.workspace = true
description = "FUSE filesystem mount for Ferro servers"
readme = "README.md"
license.workspace = true
repository = "https://github.com/WyattAu/ferro"
keywords = ["fuse", "filesystem", "webdav", "mount", "linux"]
categories = ["asynchronous", "filesystem", "os::unix-apis"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "ferro-fuse"
path = "src/main.rs"

[features]
default = ["offline-cache"]
offline-cache = ["dep:rusqlite", "dep:sha2", "dep:hex"]

[dependencies]
ferro-common = { path = "../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
futures = "0.3"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
urlencoding = "2"
lazy-regex = "3"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
fuse3 = { version = "0.7", features = ["tokio-runtime"] }
